@@ -1,3 +1,7 @@
+1997-04-05  Thomas E. Dickey  <dickey@clark.net>
+
+	* src/unmap/unmap.c: force trailing newline to make comparison simpler
+
 1997-03-12  dickey@clark.net
 
 	* src/newpath/getopt.c, src/newpath/getopt.h: RCS_BASE
